[build-system]
requires = ["setuptools", "wheel", "psutil>=5.9.7"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "PyFlashBackup"
version = "1.0.0"
description = "Simple application for auto backup USB Flash devices"
authors = ["Stanislav Chubar stas-chubar@yandex.ru"]

[tool.poetry.dependencies]
python = "^3.7"